--- a/forms/login.html
+++ b/forms/login.html
@@ -6,7 +6,7 @@
 	<em class=username-err>{USERNAME-ERR}</em><br />
 	<label for=password>Password</label><br />
 	<input type=password name=password><br />
-	<em class=password-err>{PASSWORD-ERR}<br />
+	<em class=password-err>{PASSWORD-ERR}</em><br />
 	<input type=submit value=Login>
 </form>
 </section>
