add user page, last visited link highlighting, pagination, design of login page

--- a/forms/login.html
+++ b/forms/login.html
@@ -1,4 +1,5 @@
 <section class="loginform">
+<h2 class=loginheader>Login</h2>
 <form method=post action=login.php>
 	<input type=hidden name=action value=login>
 	<label for=username>Username</label><br />
