--- a/forms/register.html
+++ b/forms/register.html
@@ -1,4 +1,5 @@
 <section class="regform">
+<h2 class=signupheader>Sign up</h2>
 <form method=post action=login.php>
 	<input type=hidden name=action value=register>
 	<label for=username>Username</label><br />
