--- a/forms/comment.html
+++ b/forms/comment.html
@@ -1,8 +1,9 @@
 <div class="commentform" {HIDE}>
 	<form class="commentform" method=post action=comments.php?linkid={LINKID} id={ID} >
-	<input type=hidden name=parent value={ID}>
-	<input type=hidden name=edit value=0>
-	<textarea name=comment id={ID}>comment...</textarea><br />
-	<input type=submit value=Comment disabled> <button name=cancel style="display: none">Cancel</button>
-</form>
+		<input type=hidden name=parent value={ID}>
+		<input type=hidden name=edit value=0>
+		<textarea name=comment id={ID}>comment...</textarea><br />
+		<input type=submit value=Comment disabled> <a href=# style=float:right;margin-right:0.6em;margin-top:2px;; class=formathelp>formatting help</a>
+	</form>
+	{FORMATTING}
 </div>
