add mod_rewrite support (including .htaccess file), reddit style base-36 encoding of link ids

--- a/forms/link.html
+++ b/forms/link.html
@@ -1,6 +1,6 @@
 <!--<style> input { font-size: 1.5em; } label { font-size: 1.5em; } input[type=checkbox] { width:1em; height: 1em; } </style>
 -->
-<form method=post action=submit.php>
+<form method=post action={ACTION}>
 	<input type=hidden name=edit value={EDIT}>
 	<label for=title>Title</label><br />
 	<input type=text name=title value="{TITLE}">
