--- a/forms/login.html
+++ b/forms/login.html
@@ -1,6 +1,6 @@
 <section class="loginform">
 <h2 class=loginheader>Login</h2>
-<form method=post action=login.php>
+<form method=post action={ACTION}>
 	<input type=hidden name=action value=login>
 	<label for=username>Username</label><br />
 	<input type=text name=username value={USERNAME}>
