--- a/forms/register.html
+++ b/forms/register.html
@@ -1,6 +1,6 @@
 <section class="regform">
 <h2 class=signupheader>Sign up</h2>
-<form method=post action=login.php>
+<form method=post action={ACTION}>
 	<input type=hidden name=action value=register>
 	<label for=username>Username</label><br />
 	<input type=text name=username value={USERNAME}>
